<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:gravity="center"
android:orientation="vertical"
android:padding="10dp"
tools:context=".activities.ChangePswActivity">

    <TextView
        android:id="@+id/txt_cambio_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_cambio_psw"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="25sp"
        android:textStyle="bold" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="30dp"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/teal_700"
            android:orientation="vertical">
            <Button
                android:id="@+id/buttonConfirmChangePsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginVertical="60dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="200dp"
                android:text="@string/conferma_title"
                android:textAlignment="center"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_layout_confirmPsw" />
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_old_psw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="25dp"
                android:textColorHint="@color/colorCtrace"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/editTextOldPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/teal_700"
                    android:focusableInTouchMode="true"
                    android:hint="@string/text_old_psw"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBehindCard"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="18sp"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_newPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorCtrace"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_layout_old_psw">
                <EditText
                    android:id="@+id/editTextNewPwd"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/teal_700"
                    android:focusableInTouchMode="true"
                    android:hint="@string/text_new_psw"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBehindCard"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_layout_confirmPsw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorCtrace"
                app:errorEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                app:layout_constraintTop_toBottomOf="@+id/txt_layout_newPsw">
                <EditText
                    android:id="@+id/editTextConfirmPwd"
                    style="@style/Widget.AppCompat.AutoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="16dp"
                    android:autofillHints=""
                    android:backgroundTint="@color/teal_700"
                    android:focusableInTouchMode="true"
                    android:hint="@string/text_confirm_psw"
                    android:inputType="textPassword"
                    android:textColor="@color/colorBehindCard"
                    android:textColorHint="@color/colorLightGray"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>